@@ -3,24 +3,27 @@ package com.fahmi.personalonlinestore.service.impl;
 import com.fahmi.personalonlinestore.dto.request.OrderDetailRequest;
 import com.fahmi.personalonlinestore.dto.request.OrderRequest;
 import com.fahmi.personalonlinestore.dto.response.OrderResponse;
+import com.fahmi.personalonlinestore.dto.response.other.PagedResponse;
 import com.fahmi.personalonlinestore.entity.Order;
 import com.fahmi.personalonlinestore.entity.OrderDetail;
 import com.fahmi.personalonlinestore.entity.Product;
 import com.fahmi.personalonlinestore.entity.User;
+import com.fahmi.personalonlinestore.exception.CustomException;
 import com.fahmi.personalonlinestore.mapper.OrderMapper;
 import com.fahmi.personalonlinestore.repository.OrderDetailRepository;
 import com.fahmi.personalonlinestore.repository.OrderRepository;
-import com.fahmi.personalonlinestore.repository.ProductRepository;
-import com.fahmi.personalonlinestore.repository.UserRepository;
 import com.fahmi.personalonlinestore.service.OrderService;
+import com.fahmi.personalonlinestore.service.ProductService;
+import com.fahmi.personalonlinestore.service.UserService;
 import com.fahmi.personalonlinestore.util.TokenHolder;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -28,24 +31,21 @@ public class OrderServiceImpl implements OrderService {
 
     private final OrderRepository orderRepository;
     private final OrderDetailRepository orderDetailRepository;
-    private final ProductRepository productRepository;
-    private final UserRepository userRepository;
+    private final ProductService productService;
+    private final UserService userService;
     private final TokenHolder tokenHolder;
 
     @Override
     @Transactional
     public OrderResponse createOrder(OrderRequest request) {
         String username = tokenHolder.getUsername();
-        User user = userRepository.findByUsername(username)
-                .orElseThrow(() -> new RuntimeException("User not found"));
-
+        User user = userService.findUserByUsername(username);
         Order order = Order.builder()
                 .user(user)
                 .status("PENDING")
-                .totalPrice(new BigDecimal("0.0"))
+                .total(new BigDecimal("0.0"))
                 .build();
         orderRepository.save(order);
-
         for (OrderDetailRequest item : request.getItem()) {
             addProductToOrder(order.getId(), item.getProductId(), item.getQuantity());
         }
@@ -54,56 +54,61 @@ public class OrderServiceImpl implements OrderService {
     }
 
     @Override
-    public List<OrderResponse> getMyOrders() {
+    public PagedResponse<OrderResponse> getMyOrders(Pageable pageable) {
         String username = tokenHolder.getUsername();
-        User user = userRepository.findByUsername(username)
-                .orElseThrow(() -> new RuntimeException("User not found"));
-
-        return orderRepository.findByUserId(user.getId()).stream()
+        User user = userService.findUserByUsername(username);
+        Page<Order> orders =  orderRepository.findByUserId(pageable, user.getId());
+        List<OrderResponse> orderResponses = orders.stream()
                 .map(OrderMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
+
+        return toPagedResponse(orders, orderResponses);
     }
 
-    @Override
-    @Transactional
-    public OrderResponse addProductToOrder(String id, String productId, int quantity) {
-        Order order = orderRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Order not found"));
-        Product product = productRepository.findById(productId)
-                .orElseThrow(() -> new RuntimeException("Product not found"));
-
+    public void addProductToOrder(String id, String productId, int quantity) {
+        Order order = findOrder(id);
+        Product product = productService.findProductById(productId);
         if (product.getStock() < quantity) {
-            throw new RuntimeException("Stock not sufficient");
+            throw new CustomException.ConflictException("Quantity exceeds stock.");
         }
-
         BigDecimal subtotal = product.getPrice().multiply(new BigDecimal(quantity));
-
         OrderDetail orderDetail = OrderDetail.builder()
                 .order(order)
                 .product(product)
                 .quantity(quantity)
                 .subtotal(subtotal)
                 .build();
-
         orderDetailRepository.save(orderDetail);
 
-        order.setTotalPrice(order.getTotalPrice().add(orderDetail.getSubtotal()));
+        order.setTotal(order.getTotal().add(subtotal));
         orderRepository.save(order);
 
         product.setStock(product.getStock() - quantity);
-        productRepository.save(product);
+        productService.saveProduct(product);
 
-        return OrderMapper.toResponse(order);
+        OrderMapper.toResponse(order);
     }
 
     @Override
     public void updateOrderStatus(String id, String status) {
-        Order order = orderRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Order not found"));
-
+        Order order = findOrder(id);
         order.setStatus(status);
-
         orderRepository.save(order);
+    }
+
+    public Order findOrder(String id) {
+        return orderRepository.findById(id)
+                .orElseThrow(() -> new CustomException.ResourceNotFoundException("Order not found."));
+    }
+
+    public PagedResponse<OrderResponse> toPagedResponse(Page<Order> orders, List<OrderResponse> orderResponses) {
+        return PagedResponse.<OrderResponse>builder()
+                .data(orderResponses)
+                .page(orders.getNumber())
+                .size(orders.getSize())
+                .totalElements(orders.getTotalElements())
+                .totalPages(orders.getTotalPages())
+                .build();
     }
 }
 
